--- a/src/OA.Web/appsettings.json
+++ b/src/OA.Web/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.AspNetCore.NewDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
